# corvus

./: .gitignore  CHANGELOG.md  CVP-ELIGIBILITY-APPEAL.md  README.md  SIGUIENTE.md  pyproject.toml
.github/workflows/: ci.yml  code-scanning.yml
case-studies/: DISCLOSURE-BATCH2-PROMPT.md  DISCLOSURE-PROCESS.md  cfp-ekoparty-2026.md  dataset_b1.md  init_audit_stats.py  public-stats.yaml  technical-paper-ekoparty-2026.md
case-studies/cs01-mcp-ecosystem/: cs01.py  findings-curated.md  methodology.md  report.md  targets-cs01-tier-a.yaml  targets-master.yaml  targets-rescan-v101.yaml  targets-retry2.yaml  targets-retry3.yaml  targets.md
case-studies/cs02-mcp-ecosystem/: candidates.yaml  cs02.py  curate.py  curated-keep.yaml  curated-skip.yaml  findings-curated-cs03.md  findings-curated.md  report.md  scraper.py  targets-cs03-expansion.yaml  targets-cs03-pypi.yaml  targets-cs03-tier2.yaml  targets-master.yaml  targets-rescan-v101-retry.yaml  targets-rescan-v101.yaml  tier-d-curated.yaml  tier-d-snippet.yaml
case-studies/cs04-mcp-ecosystem/: CS04-STATUS.md  findings-curated-cs04.md  summary.md  targets-cs04-batch-a.yaml  targets-cs04-batch-b.yaml  targets-cs04-batch-c.yaml  targets-cs04-batch1.yaml  targets-cs04-d.yaml  targets-cs04-e.yaml  targets-cs04-f.yaml  targets-cs04-g.yaml  targets-cs04-h.yaml  targets-cs04-i.yaml
case-studies/cs05-mcp-ecosystem/: candidates-2026-07-05.yaml  findings-curated-cs05.md  skipped-2026-07-05.txt  targets-cs05-a.yaml  targets-cs05-b.yaml
case-studies/cs06-mcp-ecosystem/: candidates-2026-07-05.yaml  findings-curated-cs06.md  skipped-2026-07-05.txt  targets-cs06.yaml
corvus/: __init__.py  batch.py  cli.py  config.py  diff.py  history.py  plugins.py  scoring.py
scripts/: discover.py  update-public.py
tests/: conftest.py  mock_appearing_tool_server.py  mock_http_server.py  mock_listchanged_server.py  mock_mutating_server.py  mock_server.py  mock_ssrf_server.py  mock_stateful_server.py  test_advanced_modules.py  test_batch.py  test_batch_dos.py  test_batch_ux.py  test_cancellation_probe.py  test_cli_v29.py  test_completion_probe.py  test_config.py  test_cursor_probe.py  test_cvss.py  test_diff.py  test_discover.py  test_discovery.py  test_elicitation_probe.py  test_endpoint_probe.py  test_enumerator_listchanged.py  test_fp_calibration_v3.py  test_fp_calibration_v4.py  test_fp_calibration_v5.py  test_github_advisory.py  test_history.py  test_logging_probe.py  test_modules.py  test_modules_v2.py  test_modules_v3.py  test_modules_v4.py  test_modules_v5.py  test_modules_v6.py  test_modules_v7.py  test_npm_behavior.py  test_oauth_bypass.py  test_osv_supply_chain.py  (+18 more)
(+531 files in other folders)
