[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobaltosec-corvus"
version = "1.2.0"
description = "MCP server security testing framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "security", "testing", "llm", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.5",
    "rich>=13",
    "PyYAML>=6",
    "jinja2>=3",
    "anyio>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
corvus = "corvus.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["corvus*"]

[tool.setuptools.package-data]
"corvus" = ["py.typed"]
"corvus.payloads" = ["data/*.yaml"]
"corvus.reporting" = ["templates/*.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests against real MCP servers (skipped in CI by default)",
]
addopts = "-m 'not e2e'"

[tool.ruff]
line-length = 100
target-version = "py311"
